--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
     <button class="menu-btn" onclick="toggleMenu('icecream')">🍦 Ice Cream</button>
     <div class="menu-content" id="icecream">
       <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1497034825429-c343d7c6a68f">
+        <img src=images/vanilla-ice-cream.jpg>
         <p>Vanilla</p>
       </div>
       <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1505253216365-1f94c6a3a7d4">
+        <img src="images/chocolate-ice-cream.jpg">
         <p>Chocolate</p>
       </div>
       <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1542444459-db47d03c4b9c">
+        <img src="images/strawberry-ice-cream.jpg">
         <p>Strawberry</p>
       </div>
     </div>
@@ -85,7 +85,7 @@
         <p>Cheesecake</p>
       </div>
       <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1601979031925-424e53b6caaa">
+        <img src="images/strawcake.jpg">
         <p>Strawberry Cake</p>
       </div>
     </div>
