--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
     <button class="menu-btn" onclick="toggleMenu('shake')">🥤 Shake</button>
     <div class="menu-content" id="shake">
       <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1577801599717-4a1d3b7aafc4">
+        <img src="images/chocoshake.jpg">
         <p>Chocolate Shake</p>
       </div>
       <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1589712235274-8af3b2e1f71b">
+        <img src="images/banashake.jpg">
         <p>Banana Shake</p>
       </div>
       <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1599785209707-28a9f4b9f8a4">
+        <img src="images/strawshake.jpg">
         <p>Strawberry Shake</p>
       </div>
     </div>
